# rust-play

./: Cargo.toml  docker-compose.yml  render.yaml
.sqlx/: query-13b02176a72c2c3f0778d3a15fb830879b84d390f542f7fb8b9f9b4c9ecca178.json  query-2ab0a9b0eee452f590a499ec33de123da60890cf0cba719694e6093bdc3d95df.json  query-346ffc4401764b096f9dbf412431ecfaf8e4236c4427c1bef97e3320aa26bf9a.json  query-3a4b587fbc6f7700dcc872b96bfa00c9fb9dcda7930ad3cb1eeafd35c00419fb.json  query-4828c61080feb9b3066a2e56fe3b8935bc2d25121f8d2547b9513f7443af89a9.json  query-4c0bd78be95fdde86372eeb7c2f60a201726e7a498e683dc79cb084c706d96b9.json  query-5e87bd03aee25434432fafa1dee3746cf39b85a02692c44e02603630a47aaf52.json  query-5fdbc6267f6a4b3ecbf11ce1b2ab0ff9069e22ae6496cf774705cae8fce34f5d.json  query-6db308d44f8d61df25e72b591a72928978b522d8a99dff6ef95568d21853b01d.json  query-8ee1727530b1da3e4b61a6b2be82c173b31b9f57c9b96100d114d73a79a7a359.json  query-95635b17b0e329205d725a451a00024932531f443543c361b11e01d82989b486.json  query-9ea8776429c758d5f57fb8a443017a064f57c733c0adb7970106f38522962d2c.json  query-a4dabab5444f575af3fd9762f324983ad2942731101d91e24c0513e57f314922.json  query-b7503c061a2df76d3833835f879e1091ac4bda7c27cb6f71a97635c0c536b902.json  query-bc015b520cfa5554e6a96ba07366c4dc7b10f16b1661263d2b1cfed48bde649c.json  query-c06086b7ca15e7132081947d934d42e7c8d55d6edb4d008adb0c8077044be1fb.json  query-c0e8463ff9a8da52b69600992f319ce62cee82fefb4972b8284f74887dd56b3a.json  query-c4f2bd0d2739f7735e2628232506767429786f43373469f9b4c7f728eced6a72.json  (+7 more)
migrations/: 20260624_create_keywords.sql  (+9 more)
(+10 files in other folders)
